--- a/EscapeRoom/ES-aboutEscape.html
+++ b/EscapeRoom/ES-aboutEscape.html
@@ -84,6 +84,9 @@
             background-image: url(img/aboutE-people.jpg);
 
         }
+        .hide{
+            overflow: hidden;
+        }
 
         @media(max-width:1420px) {
             .nav {
@@ -298,7 +301,7 @@
     </section>
 
     <section class="">
-        <div class="container">
+        <div class="container hide">
             <div class="row">
                 <div class="col-lg-4 ">
                     <div class="row justify-content-center phone">
