--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -25,7 +25,7 @@
         .banner {
             width: 100%;
             height: 900px;
-            background-image: url(img/police-banner.png);
+            background-image: url(img/theme-banner-TT.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             overflow: hidden;
