--- a/EscapeRoom/ES-aboutEscape.html
+++ b/EscapeRoom/ES-aboutEscape.html
@@ -30,7 +30,7 @@
         .banner {
             width: 100%;
             height: 900px;
-            background-image: url(img/aboutE-banner.jpg);
+            background-image: url(img/aboutE-banner-C.jpg);
             background-repeat: no-repeat;
             background-size: cover;
         }
