--- a/EscapeRoom/ES-theme.html
+++ b/EscapeRoom/ES-theme.html
@@ -215,10 +215,10 @@
                             class="turn">轉</span>偵訊室</a> </p>
             </div>
             <div class="banner bomb">
-                <p><a href="">爆彈拆除班</a></p>
+                <p><a href="/EscapeRoom/ES-theme-bomb.html">爆彈拆除班</a></p>
             </div>
             <div class="banner doctor">
-                <p><a href="">御醫</a></p>
+                <p><a href="/EscapeRoom/ES-theme-doctor.html">御醫</a></p>
             </div>
         </div>
     </section>
@@ -234,12 +234,12 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="col-12 phoneBanner bomb">
-                        <p><a href="">爆彈<br>拆除班</a></p>
+                        <p><a href="/EscapeRoom/ES-theme-bomb.html">爆彈<br>拆除班</a></p>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="col-12 phoneBanner doctor">
-                        <p><a href="">御醫</a></p>
+                        <p><a href="/EscapeRoom/ES-theme-doctor.html">御醫</a></p>
                     </div>
                 </div>
             </div>
