--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -88,7 +88,7 @@
             font-size: 24px;
             color: #CECAB8;
             line-height: 70px;
-            text-align: right;
+            text-align: left;
         }
 
         .speaker {
