--- a/EscapeRoom/ES-theme.html
+++ b/EscapeRoom/ES-theme.html
@@ -32,7 +32,7 @@
         .police {
             background-image: url(img/theme-banner.jpg);
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: 0% 75%;
             background-size: cover;
             text-shadow: 0.2em 0.2em 0.2em #23220C;
 
