--- a/EscapeRoom/ES-aboutEscape.html
+++ b/EscapeRoom/ES-aboutEscape.html
@@ -87,6 +87,9 @@
         .hide{
             overflow: hidden;
         }
+        .shadowtest{
+            text-shadow: 0.1em 0.1em 0.1em #23220C;
+        }
 
         @media(max-width:1420px) {
             .nav {
@@ -342,8 +345,8 @@
     <section>
         <div class="container-fluid team d-flex justify-content-center ">
             <div class="container d-flex justify-content-center align-items-center">
-                <p class="textinfo">
-                    <span>在職進修與同樂會等場合中，用活潑的學習體驗構成深刻的印象，與平日的工作形成強力的連結</span><br>
+                <p class="textinfo shadowtest">
+                    <span class="">在職進修與同樂會等場合中，用活潑的學習體驗構成深刻的印象，與平日的工作形成強力的連結</span><br>
                     → 於限定時間內與其他成員一起往共同目標邁進，體驗團隊合作的意義。<br>
                     → 與團隊成員間共享資訊，互通有無。<br>
                     → 扮演好各自的角色，相互彌補不足的地方，充分養成團隊合作的精神。<br>
