--- a/EscapeRoom/ES-fee.html
+++ b/EscapeRoom/ES-fee.html
@@ -24,7 +24,7 @@
 
         .box {
             height: 792px;
-            background-color: #ADB241;
+            background-color: rgba(173, 178, 68, 0.4);
             background-image: url('img/fee-background.png');
             padding: 120px 0;
         }
@@ -57,18 +57,17 @@
         }
         .phonelock{
             position: relative;
-            color: #23220C;
             text-align: left;
             left: 15px;
         }
         .phonelock::before {
             content:"";
-            background: url('./img/lock-phone.png');
+            background: url('./img/lock.png');
             display: inline-block;
             width: 23px;
             height: 19px;
             position: absolute;
-            top: 1px;
+            top: 10px;
             left: -20px;
         }
 
@@ -89,7 +88,7 @@
         }
 
         .rule {
-            color: #21210C;
+            color: #ffffff;
         }
         .mr-20{
             margin-right: 20px;
@@ -190,7 +189,7 @@
             }
 
             .feePhone {
-                background-color: #ADB241;
+                background-color: rgba(173, 178, 68, 0.4);
                 background-image: url('img/fee-PhoneBackground.png');
                 background-size: contain;
                 /* max-width: 575px; */
@@ -307,8 +306,8 @@
                     <p class="feePhoneText-1">平日1599元/場 <br>假日1999元/場 </p class="">
                 </div>
                 <div class="col-12 feePhonecontan"><img src="./img/fee-Charter-phone.png" alt="">
-                    <h2>包場</h2>
-                    <p class="feePhoneText-1">平日1599元/場 <br>假日1999元/場 </p class="">
+                    <h2>併組</h2>
+                    <p class="feePhoneText-1">平日250元/場 <br>假日300元/場 </p class="">
                 </div>
                 <div class="col-10"><hr></div>
                 <div class="col-9 phonelock">包場最多為8位進場</div>
