--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -461,7 +461,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center ">
-                    <div class="col-lg-2 themeBtn"> <a href="/EscapeRoom/ES-theme-bomb.html"></a> NEXT</div>
+                    <div class="col-lg-2 themeBtn"> <a href="/EscapeRoom/ES-theme-bomb.html">NEXT</a></div>
                 </div>
             </div>
         </div>
