--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -139,7 +139,7 @@
             
             text-align: center;
             color: white;
-            margin-top: 75px;
+            margin-top: 70px;
             border: 1px solid white;
             font-size: 36px;
             transition: 500ms;
@@ -292,6 +292,12 @@
             .gotop {
                 right: 30px;
                 bottom: 30px;
+            }
+            .boxShadolTop{
+                display: none;
+            }
+            .boxShadolBot{
+                display: none;
             }
 
         }
