--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -29,7 +29,7 @@
             width: 100%;
             height: 1005px;
             background-image: url(img/theme-banner3.jpg);
-            background-size:cover;
+            background-size: cover;
             padding-top: 15%;
         }
 
@@ -59,6 +59,16 @@
             color: #3E7794;
             text-align: center;
             line-height: 80px;
+        }
+        .phone{
+                display: none;
+            }
+
+        @media(width:576px) {
+            .phone{
+                display: block;
+            }
+
         }
     </style>
 </head>
@@ -212,6 +222,12 @@
             </div>
         </div>
     </section>
+
+    <main class="phone">
+
+    </main>
+
+
 
     <footer class="container-fluid" style="padding:0;">
         <div class="information d-flex align-items-center justify-content-center">
