--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -26,46 +26,6 @@
             margin: 0;
         }
 
-        .Banner {
-            width: 100%;
-            height: 1005px;
-            background-image: url(img/theme-banner3.jpg);
-            background-size: cover;
-            padding-top: 15%;
-        }
-
-        .bg {
-            width: 100%;
-            background-image: url(img/moon_bg.png);
-            background-size: cover;
-        }
-
-        .game-rules {
-            width: 100%;
-            height: 964px;
-            background-image: url(img/bot_bg.png);
-        }
-
-        .information {
-            width: 100%;
-            height: 180px;
-            color: white;
-            background-color: #3E7794;
-        }
-
-        .copyright {
-            width: 100%;
-            height: 80px;
-            background-color: #0A0F20;
-            color: #3E7794;
-            text-align: center;
-            line-height: 80px;
-        }
-
-        .phone {
-            display: none;
-        }
-
         @media(max-width:576px) {
             .pc {
                 display: none;
@@ -73,6 +33,7 @@
 
             .phone {
                 display: block;
+
             }
 
             .box {
@@ -89,196 +50,46 @@
             .gradient {
                 width: 100%;
                 height: 450px;
-                background: linear-gradient( #3E7794 0%, #0A0F20 100%);
+                background: linear-gradient(#3E7794 0%, #0A0F20 100%);
                 opacity: 0.7;
-                transform: translateY(-50%);
+                transform: translateY(-40%);
                 position: absolute;
                 z-index: -1;
-                }
-                
-
             }
+
+            .margin-auto {
+                margin: auto;
+            }
+
+            .rule {
+                color: white;
+                font-size: 20px;
+                line-height: 50px;
+            }
+
+            .speakerBoss {
+                font-size: 16px;
+                line-height: 3;
+                color: white;
+            }
+
+            .speakerloser {
+                font-size: 16px;
+                line-height: 3;
+                color: #549FB6;
+            }
+            .titleName{
+                color: #3E7794;
+                font-size: 36px;
+            }
+
+
+
+        }
     </style>
 </head>
 
-<body >
-
-    <div class="pc">
-        <header class="Banner">
-            <div class="container">
-                <div class="row justify-content-end">
-                    <div class="col-lg-4"
-                        style="font-size: 120px; color: white; letter-spacing: 50px; text-shadow: -20px 18px 8px #040A19;">
-                        <p>御醫</p>
-                    </div>
-                </div>
-                <div class="row justify-content-between">
-                    <div class="col-lg-3"
-                        style="font-size: 24px; color: white; text-align:left; line-height: 65px; flex-direction: column;">
-                        <p>過關率：40％</p>
-                        <p>團隊：★★★★</p>
-                        <p>操作：★★★★★</p>
-                        <p>解謎：★★★</p>
-                    </div>
-                </div>
-            </div>
-        </header>
-
-        <main class="">
-            <section class="container-fluid bg" style="padding:150px 0;">
-                <div class="container">
-                    <div class="row" style="position: relative;">
-                        <img class="col-lg" src="img/comic_01_1.png" style="width:100%" alt="">
-                    </div>
-                    <div class="row justify-content-center" style="text-align: center; margin-top: 30px;">
-                        <div class="col-lg-5">
-                            <p style="color:#3E7794; font-size:24px;">『御醫』總是掌握了當時最高的醫術，
-                            </p>
-                            <p style="color:white; font-size:16px; line-height: 36px;">並且受到皇帝極度的信任才能成為獨當一面的御醫。</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="container-fluid bg" style="padding:100px 0;">
-                <div class="container">
-                    <div class="row">
-                        <img class="col-lg" src="img/comic_02_01.png" alt="">
-                    </div>
-                    <div class="row">
-                        <img class="col-lg-7" src="img/comic_02_02.png" alt="">
-                        <div class="col-lg-5" style="margin-top: -25px; position:relative;">
-                            <img width="100%" height="385px" src="img/comic_02_03.png" alt="">
-                            <div
-                                style="text-align:center; position:absolute; bottom:205px; right:85px; line-height: 36px; color:white; font-size:16px;">
-                                <p>而上官大夫也不例外，</p>
-                                <p style="color:#3E7794; font-size:24px;">因著他高明且神奇的醫術，</p>
-                                <p>受到皇上完全的信任。</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="container-fluid bg" style="padding:100px 0;">
-                <div class="container">
-                    <div class="row" style=" position:relative;">
-                        <img class="col-lg" src="img/comic_03_01.png" alt="">
-                        <div
-                            style="text-align:center; position:absolute; top:145px; left:135px; line-height: 36px; color:white; font-size:16px;">
-                            <p>但是......</p>
-                            <p style="color:#3E7794; font-size:24px;">從來沒有人知道上官大夫的來歷，</p>
-                            <p>也不知道他有如華陀在世般的醫術是從何處習得。</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <img class="col-lg-5" src="img/comic_03_02.png" alt="">
-                        <img class="col-lg-7" style="margin-top:-47px;" src="img/comic_03_03.png" alt="">
-                    </div>
-                </div>
-            </section>
-
-            <section class="container-fluid bg" style="padding:300px 0;">
-                <div class="container">
-                    <div class="row" style="position:relative;">
-                        <img class="col-lg" src="img/comic_04.png" style="width:100%;" alt="">
-                        <img style="transform:scaleX(-1); position:absolute; top:20px; right:150px;"
-                            src="img/skull ver2.gif" alt="">
-                    </div>
-                    <div class="row justify-content-center" style="margin-top:100px;">
-                        <p class="col-lg-5" style="color:white; font-size:16px; text-align:center;">
-                            反而傳言他與最近宮內許多失蹤的太監、宮女有關......
-                        </p>
-                    </div>
-                </div>
-            </section>
-
-            <section class="container-fluid bg" style="padding:200px 0;">
-                <div class="container" style="position:relative;">
-                    <div class="row">
-                        <img class="col-lg" src="img/comic_05.png" style="width:100%;" alt="">
-                    </div>
-                    <div style="line-height:36px; position:absolute; bottom:10px; right:30px;">
-                        <p style="color:white; font-size:16px;">身為首屈一指的大內高手，你臨危受命要潛入調查上官大夫的秘密。</p>
-                        <p style="color:#3E7794; font-size:24px; text-align: right;">希望這不是一趟有去無回的任務……</p>
-                    </div>
-                </div>
-            </section>
-        </main>
-
-        <section class="d-flex"
-            style="padding:150px 0; background-color: #0A0F20;  justify-content:center; position: relative;">
-            <img src="img/border.png" alt="">
-            <div class="container"
-                style="position: absolute; top:50%; left:50%; transform:translate(-50%, -50%); padding-bottom: 60px;">
-                <div class="row justify-content-center" style="text-align: center;">
-                    <div class="col-lg-4">
-                        <img src="img/key.png" alt="">
-                        <div style="color: black; font-size: 16px; line-height: 36px;">
-                            <p style="color: #549FB6;font-size: 24px; font-weight:bold; line-height:48px;">特別提醒</p>
-                            <p>要揭穿御醫的詭計，必須了解各種藥理針灸醫術，記憶與理解的情報很多，也可能有陰森血腥的場景。</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section>
-            <div class="game-rules d-flex align-items-center">
-                <div class="container d-flex justify-content-around">
-                    <div class="col-lg-3">
-                        <div style=" text-align: center;">
-                            <img src="img/people_d.png" alt="">
-                            <div style="color: #549FB6; font-size: 24px; font-weight:bold; margin-bottom: 20px;">挑戰人數
-                            </div>
-                            <p style="color: white;font-size: 16px;">4~8人</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div style=" text-align: center;">
-                            <img src="img/time_d.png" alt="">
-                            <div style="color: #549FB6;font-size: 24px; font-weight:bold; margin-bottom: 20px;">挑戰時間
-                            </div>
-                            <p style="color: white;font-size: 16px;">60分鐘</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div style=" text-align: center;">
-                            <img src="img/key_d.png" alt="">
-                            <div style="color: #549FB6;font-size: 24px; font-weight:bold; line-height:48px;">場次時間</div>
-                            <p style="color: white;font-size: 16px; line-height: 36px;">11:20 / 12:40 / 14:10 / 15:40 /
-                            </p>
-                            <p style="color: white;font-size: 16px; line-height: 36px;">17:10 / 18:30 / 19:50</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <footer class="container-fluid" style="padding:0;">
-            <div class="information d-flex align-items-center justify-content-center">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 d-flex align-items-center justify-content-center">
-                            <img src="img/logo-white.png" alt="">
-                            <p style="font-size: 24px; margin:0 16px;">許多門</p>
-                            <div class="d-flex" style="flex-direction: column;font-size: 6px;">
-                                <p style="letter-spacing:1.2px;">ESCAPE</p>
-                                <p>STUDIOS</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-7">
-                            <p style="font-size: 16px; line-height:36px;">台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面）</p>
-                            <p style="font-size: 16px;">TEL 04-23020080 / 0971283166</p>
-                        </div>
-                        <div class="col-lg-1">
-                            <a href="https://www.facebook.com/TCDOORSSS"><img src="img/fb_d.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="copyright">Copyright &copy; 許多門 Inc. All rights reserved</div>
-        </footer>
-    </div>
+<body>
 
 
 
@@ -286,13 +97,58 @@
 
     <main class="phone">
         <div class="box">
-            <img src="./doctorImg/title_p.png" alt=""></div>
-            <div class="gradient"></div>
+            <img src="./doctorImg/title_p.png" alt="">
+        </div>
+        <div class="container text-center">
+            <div class="row justify-content-center">
+                <div class="gradient col-12 d-flex justify-content-center"></div>
+                <p class="rule">過關率：40％ <br>
+                    團隊：★★★★<br>
+                    操作：★★★★★<br>
+                    解謎：★★★</p>
+                <div class="col-12"><img width="100%" height="228px" src="./doctorImg/comic_01_p.png" alt=""></div>
+                <div class="col-12">
+                    <p> <span class="speakerloser">『御醫』總是掌握了當時的最高醫術，</span> <br>
+                        <span class="speakerBoss"> 並受到皇帝極度信任才能成為獨當一面的御醫。</span></p>
+                </div>
+                <div class="col-12"><img width="100%" height="228px" src="./doctorImg/comic_02_p.png" alt=""></div>
+                <div class="col-12">
+                    <p> <span class="speakerBoss">而上官大夫也不例外，</span> <br>
+                        <span class="speakerloser">因著他高明且神奇的醫術，</span> <br>
+                        <span class="speakerBoss">受到皇上完全的信任。</span> </p>
+                </div>
+                <div class="col-12"><img width="100%" height="228px" src="./doctorImg/comic_03_p.png" alt=""></div>
+                <div class="col-12">
+                    <p> <span class="speakerBoss">但是......</span><br>
+                        <span class="speakerloser">從來沒有人知道上官大夫的來歷，</span><br>
+                        <span class="speakerBoss">也不知道他有如華佗再世一般的</span><br>
+                        <span class="speakerBoss">神奇醫術是從何處習得。</span>/p>
+                </div>
+                <div class="col-12"><img width="100%" src="./doctorImg/comic_04_p.png" alt=""></div>
+                <div class="col-12">
+                    <p> <span class="speakerBoss">反而傳言他與最近宮內</span><br>
+                        <span class="speakerBoss">許多失蹤的太監、宮女有關......</span></p>
+
+                </div>
+                <div class="col-6"><img width="133px" height="188px" src="./doctorImg/comic_05_p.png" alt=""></div>
+                <div class="col-12">
+                    <p> <span class="speakerBoss">身為首屈一指的大內高手，</span><br>
+                        <span class="speakerBoss">你臨危受命要潛入調查上官大夫的祕密。</span> br>
+                        <span class="speakerloser">希望這不會是一趟有去無回的任務......</span></p>
+                </div>
+                <div class="col-12"><img src="./img/key.png" alt=""> </div>
+                <p class="titleName">特別提醒</p>
+                <p class="speakerBoss"> 要揭穿御醫的詭計，必須了解各種藥理針灸醫術， 記憶與理解的情報很多，也可能有陰森血腥的場景。</p>
+
+            </div>
+        </div>
+
+
     </main>
 
 
 
-   
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
