--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -303,9 +303,8 @@
                             <p class="gameName">ESCAPE <br>STUDIOS </p>
                         </div>
                         <div class="col-lg-7 col-9">
-                            <b class="info">台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面）<br> TEL 04-23020080
-                                /
-                                0971283166</b>
+                            <b class="info">TEL 04-23020080/0971283166<br>
+                                台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面） </b>
                         </div>
                         <div class="col-lg-1 col-3 d-flex align-items-center justify-content-center">
                             <a href="https://www.facebook.com/TCDOORSSS"><img src="img/fb-logo.png" alt=""></a>
