--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -25,6 +25,7 @@
             padding: 0;
             margin: 0;
         }
+
         .nav {
             width: 100%;
             height: 80px;
@@ -68,7 +69,7 @@
         .information {
             width: 100%;
             height: 180px;
-            background-color: #549FB6 ;
+            background-color: #549FB6;
         }
 
         .logoName {
@@ -187,6 +188,7 @@
                 background: rgba(255, 255, 255, 0.85);
                 color: black;
             }
+
             .nav {
                 padding: 0 30px;
                 height: 60px;
@@ -235,7 +237,7 @@
                 bottom: 30px;
             }
 
-            
+
 
 
 
@@ -368,9 +370,8 @@
                             <p class="gameName">ESCAPE <br>STUDIOS </p>
                         </div>
                         <div class="col-lg-7 col-9">
-                            <b class="info">台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面）<br> TEL 04-23020080
-                                /
-                                0971283166</b>
+                            <b class="info">TEL 04-23020080/0971283166<br>
+                                台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面） </b>
                         </div>
                         <div class="col-lg-1 col-3 d-flex align-items-center justify-content-center">
                             <a href="https://www.facebook.com/TCDOORSSS"><img src="./doctorImg/fb_d_p.png" alt=""></a>
