--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -237,6 +237,13 @@
                 bottom: 30px;
             }
 
+            .margin-top50{
+                margin-top: 50px;
+            }
+            .margin-top75{
+               margin-top: 75px;
+            }
+
 
 
 
@@ -282,43 +289,43 @@
         </div>
         <div class="container text-center">
             <div class="row justify-content-center">
-                <div class="gradient col-12 d-flex justify-content-center"></div>
-                <p class="rule">過關率：40％ <br>
+                <div  class="gradient col-12 d-flex justify-content-center"></div>
+                <p class="rule margin-top50">過關率：40％ <br>
                     團隊：★★★★<br>
                     操作：★★★★★<br>
                     解謎：★★★</p>
-                <div class="col-12"><img width="100%" height="228px" src="./doctorImg/comic_01_p.png" alt=""></div>
-                <div class="col-12">
+                <div class="col-12 margin-top75"><img width="100%" height="228px" src="./doctorImg/comic_01_p.png" alt=""></div>
+                <div class="col-12 margin-top50">
                     <p> <span class="speakerloser">『御醫』總是掌握了當時的最高醫術，</span> <br>
                         <span class="speakerBoss"> 並受到皇帝極度信任才能成為獨當一面的御醫。</span></p>
                 </div>
-                <div class="col-12"><img width="100%" height="228px" src="./doctorImg/comic_02_p.png" alt=""></div>
-                <div class="col-12">
+                <div class="col-12 margin-top75"><img width="100%" height="228px" src="./doctorImg/comic_02_p.png" alt=""></div>
+                <div class="col-12 margin-top50">
                     <p> <span class="speakerBoss">而上官大夫也不例外，</span> <br>
                         <span class="speakerloser">因著他高明且神奇的醫術，</span> <br>
                         <span class="speakerBoss">受到皇上完全的信任。</span> </p>
                 </div>
-                <div class="col-12"><img width="100%" height="228px" src="./doctorImg/comic_03_p.png" alt=""></div>
-                <div class="col-12">
+                <div class="col-12 margin-top75"><img width="100%" height="228px" src="./doctorImg/comic_03_p.png" alt=""></div>
+                <div class="col-12 margin-top50">
                     <p> <span class="speakerBoss">但是......</span><br>
                         <span class="speakerloser">從來沒有人知道上官大夫的來歷，</span><br>
                         <span class="speakerBoss">也不知道他有如華佗再世一般的</span><br>
                         <span class="speakerBoss">神奇醫術是從何處習得。</span>/p>
                 </div>
-                <div class="col-12"><img width="100%" src="./doctorImg/comic_04_p.png" alt=""></div>
-                <div class="col-12">
+                <div class="col-12 margin-top75"><img width="100%" src="./doctorImg/comic_04_p.png" alt=""></div>
+                <div class="col-12 margin-top50">
                     <p> <span class="speakerBoss">反而傳言他與最近宮內</span><br>
                         <span class="speakerBoss">許多失蹤的太監、宮女有關......</span></p>
 
                 </div>
-                <div class="col-6"><img width="133px" height="188px" src="./doctorImg/comic_05_p.png" alt=""></div>
-                <div class="col-12">
+                <div class="col-6 margin-top75"><img width="133px" height="188px" src="./doctorImg/comic_05_p.png" alt=""></div>
+                <div class="col-12 margin-top50">
                     <p> <span class="speakerBoss">身為首屈一指的大內高手，</span><br>
                         <span class="speakerBoss">你臨危受命要潛入調查上官大夫的祕密。</span> br>
                         <span class="speakerloser">希望這不會是一趟有去無回的任務......</span></p>
                 </div>
-                <div class="col-12"><img src="./doctorImg/key_d_p.png" alt=""> </div>
-                <p class="titleName">特別提醒</p>
+                <div class="col-12 margin-top75"><img src="./doctorImg/key_d_p.png" alt=""> </div>
+                <p class="titleName margin-top50">特別提醒</p>
                 <p class="speakerBoss"> 要揭穿御醫的詭計，必須了解各種藥理針灸醫術， 記憶與理解的情報很多，也可能有陰森血腥的場景。</p>
             </div>
         </div>
@@ -350,7 +357,7 @@
                         </div>
                     </div>
                     <div class="row justify-content-center ">
-                        <div class="col-lg-2 themeBtn"> <a href="/EscapeRoom/ES-theme-bomb.html">BACK</a></div>
+                        <div class="col-lg-2 themeBtn"> <a href="/EscapeRoom/ES-theme.html">BACK</a></div>
                     </div>
                 </div>
             </div>
