--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -103,6 +103,10 @@
             right: 61px;
             bottom: 61px;
         }
+        .themeBtn a {
+            color: white;
+        }
+
 
         @media(max-width:576px) {
             .pc {
