--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -257,6 +257,7 @@
 </head>
 
 <body>
+    <!-- 電腦 -->
 
     <!-- 手機 -->
     <header>
@@ -325,7 +326,7 @@
                 <div class="col-6 margin-top75"><img width="133px" height="188px" src="./doctorImg/comic_05_p.png" alt=""></div>
                 <div class="col-12 margin-top50">
                     <p> <span class="speakerBoss">身為首屈一指的大內高手，</span><br>
-                        <span class="speakerBoss">你臨危受命要潛入調查上官大夫的祕密。</span> br>
+                        <span class="speakerBoss">你臨危受命要潛入調查上官大夫的祕密。</span> <br>
                         <span class="speakerloser">希望這不會是一趟有去無回的任務......</span></p>
                 </div>
                 <div class="col-12 margin-top75"><img src="./doctorImg/key_d_p.png" alt=""> </div>
