--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -148,6 +148,9 @@
             background: rgba(255, 255, 255, 0.85);
             color: black;
         }
+        .themeBtn:hover.themeBtn a{
+            color: black;
+        }
         .themeBtn a {
             color: white;
         }
