--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Document</title>
     <style>
         * {
@@ -26,18 +27,59 @@
             margin: 0;
         }
 
-        .Banner {
+        a,
+        a:hover {
+            color: white;
+        }
+
+        ul {
+            margin: 0;
+            padding: 0;
+            margin-bottom: unset;
+        }
+
+
+        ul li {
+            list-style: none;
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            margin-left: 30px;
+            line-height: 80px;
+        }
+
+        .nav {
+            width: 100%;
+            height: 80px;
+            background-color: #A74141;
+            padding: 0 250px;
+        }
+
+        .banner {
             width: 100%;
             height: 981px;
-            background-image: url(img/theme-banner2.jpg);
+            background-image: url(../EscapeRoom/test/img/theme-banner2.jpg);
             background-size: cover;
+            background-position: 40% center;
             padding-top: 17%;
+        }
+
+        .banner2{
+            width: 100%;
+            height: 70%;
+            background-color:#200B0B;
+            position: absolute;
+            left:0;
+            top: 74%;
+            z-index: 9;
+            transform: skewY(-4.5deg);
+            display: none;
         }
 
         .bombgame {
             width: 100%;
             height: 1288px;
-            background-image: url(img/bomb-game-bg.png);
+            background-image: url(../EscapeRoom/test/img/bomb-game-bg.png);
             background-repeat: no-repeat;
             margin-top: -154px;
             padding-top: 15%;
@@ -252,7 +294,8 @@
         .game-rules {
             width: 100%;
             height: 900px;
-            background-image: url(img/bomb-banner2.jpg);
+            background-image: url(../EscapeRoom/test/img/bomb-banner2.jpg);
+            background-position: center;
         }
 
         .information {
@@ -270,20 +313,70 @@
             text-align: center;
             line-height: 80px;
         }
+
+        @media (max-width:576px) {
+            .banner .intro {
+                text-align: center !important;
+                position:absolute;
+                top:100%;
+            }
+
+            .banner2{
+                display:block;
+            }
+
+            .bombgame,
+            .bomb4 {
+                display: none;
+            }
+        }
     </style>
 </head>
 
 <body>
+    <nav class="nav d-flex justify-content-between">
+        <div class="navLogo col-lg-4 d-flex align-items-center justify-content-center">
+            <img width="45px" height="45px" src="../EscapeRoom/test/img/logo-white.png" alt="">
+            <a href="/EscapeRoom/index.html">
+                <p style="font-size: 24px; margin:0 16px;">許多門</p>
+            </a>
+            <div class="d-flex" style="flex-direction: column;font-size: 6px;">
+                <a href="/EscapeRoom/index.html">
+                    <p style="letter-spacing:1.2px;">ESCAPE</p>
+                    <p>STUDIOS</p>
+                </a>
+            </div>
+        </div>
+        <div class="nav-btn-group pc">
+            <ul class="d-flex">
+                <li><a href="/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
+                <li><a href="/EscapeRoom/ES-news.html">最新消息</a></li>
+                <li><a href="/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                <li><a href="/EscapeRoom/ES-theme.html">主題介紹</a></li>
+                <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
+            </ul>
+        </div>
+        <!-- <div class="ham mobile">
+            <ul>
+                <li><a href="/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
+                <li><a href="/EscapeRoom/ES-news.html">最新消息</a></li>
+                <li><a href="/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                <li><a href="/EscapeRoom/ES-theme.html">主題介紹</a></li>
+                <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
+            </ul>
+        </div> -->
+    </nav>
+
     <header>
-        <div class="Banner container-fluid">
+        <div class="banner container-fluid" style="position:relative;">
             <div class="container">
                 <div class="row d-flex justify-content-between align-items-center">
-                    <div class="col-lg-6" style="font-size: 120px; color: white; line-height: 170px;">
+                    <div class="col-lg-6 col-12" style="font-size: 120px; color: white; line-height: 170px;">
                         <p>爆彈</p>
                         <p>拆除班</p>
                     </div>
-                    <div class="col-lg-5 d-flex"
-                        style="font-size: 24px; color: white; text-align:right; line-height: 65px; flex-direction: column;">
+                    <div class="col-lg-4 col-12 d-flex intro"
+                        style="font-size: 24px; color: white; text-align:left; line-height: 65px; flex-direction: column; padding-left:12%;">
                         <p>過關率：15％</p>
                         <p>團隊：★★★</p>
                         <p>操作：★★★★★★</p>
@@ -291,39 +384,42 @@
                     </div>
                 </div>
             </div>
+            <div class="banner2"></div>
         </div>
     </header>
 
-    <section class="bombgame d-flex justify-content-center" style="position: relative;">
-        <div class="bomb">
-            <div class="time"></div>
-            <img src="img/bomb-game-02.png" alt="">
-            <div class="yellow">
-                <img class="u-line" src="img/bomb-game-13.png" alt="">
-                <img class="c-line" src="img/bomb-game-16.png" alt="">
-                <div class="linemask"></div>
+    <section class="bombgame" style="position: relative;">
+        <div class="d-flex justify-content-center">
+            <div class="bomb">
+                <div class="time"></div>
+                <img src="../EscapeRoom/test/img/bomb-game-02.png" alt="">
+                <div class="yellow">
+                    <img class="u-line" src="../EscapeRoom/test/img/bomb-game-13.png" alt="">
+                    <img class="c-line" src="../EscapeRoom/test/img/bomb-game-16.png" alt="">
+                    <div class="linemask"></div>
+                </div>
+                <div class="green">
+                    <img class="u-line" src="../EscapeRoom/test/img/bomb-game-14.png" alt="">
+                    <img class="c-line" src="../EscapeRoom/test/img/bomb-game-17.png" alt="">
+                    <div class="linemask"></div>
+                </div>
+                <div class="blue">
+                    <img class="u-line" src="../EscapeRoom/test/img/bomb-game-15.png" alt="">
+                    <img class="c-line" src="../EscapeRoom/test/img/bomb-game-18.png" alt="">
+                    <div class="linemask"></div>
+                </div>
             </div>
-            <div class="green">
-                <img class="u-line" src="img/bomb-game-14.png" alt="">
-                <img class="c-line" src="img/bomb-game-17.png" alt="">
-                <div class="linemask"></div>
-            </div>
-            <div class="blue">
-                <img class="u-line" src="img/bomb-game-15.png" alt="">
-                <img class="c-line" src="img/bomb-game-18.png" alt="">
-                <div class="linemask"></div>
-            </div>
+            <div class="ray"></div>
+            <div class="mask"></div>
+            <p class="warning">警告：剪去兩條正確的線路，才能停止炸彈</p>
         </div>
-        <div class="ray"></div>
-        <div class="mask"></div>
-        <p class="warning">警告：剪去兩條正確的線路，才能停止炸彈</p>
     </section>
 
-    <main style="background-color:#200B0B; position:relative; margin-top:-236px;">
+    <main style="background-color:#200B0B; position:relative; margin-top:-236px; z-index:99">
         <section class="container" style="padding-top:200px;">
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-lg-8">
-                    <img style="width:100%;" src="img/bomb2.png" alt="">
+                    <img style="width:100%;" src="../EscapeRoom/test/img/bomb2.png" alt="">
                 </div>
                 <div class="col-lg-4"
                     style="color:white; font-size:16px; line-height: 36px; text-align:center; padding-bottom:45px;">
@@ -338,7 +434,8 @@
 
         <section class="container-fluid" style="padding-top:200px;">
             <div class="row d-flex justify-content-center align-items-center">
-                <img src="img/soldiers.png" alt="" class="col-lg-4" style="width: 100%; height: 100%; padding:0;">
+                <img class="col-lg-4" style="width: 100%; height: 100%; padding:0;" data-aos="fade-up-right"
+                    src="../EscapeRoom/test/img/soldiers.png" alt="">
                 <div class="col-lg-3 d-flex"
                     style="color: white; font-size:16px; line-height: 36px; text-align: center; flex-direction: column; padding-bottom: 160px; padding-right:25px">
                     <p style=" color:#A74141;">『反恐特搜-爆彈拆除班』，</p>
@@ -346,19 +443,20 @@
                     <p>靠著精良高科技的設備與特別徵召的優秀隊員，</p>
                     <p>『爆彈拆除班』解決了許多緊急的攻擊事件！</p>
                 </div>
-                <img class="col-lg-5" style="width: 100%; height: 100%; padding:0" src="img/soldiers2.png" alt="">
+                <img class="col-lg-5" style="width: 100%; height: 100%; padding:0" data-aos="fade-left"
+                    src="../EscapeRoom/test/img/soldiers2.png" alt="">
             </div>
         </section>
 
         <section style="padding-top:200px; position:relative">
             <div class="container">
                 <div class="row justify-content-center">
-                    <img class="col-lg-10" src="img/bomb3.png" alt="">
+                    <img class="col-lg-10" src="../EscapeRoom/test/img/bomb3.png" alt="">
                 </div>
             </div>
             <div class="container-fluid" style="position:absolute; top:100px; right:0">
                 <div class="row" style="justify-content:flex-end; padding:0;">
-                    <img class="col-lg" style="padding:0;" src="img/bomb4.png" alt="">
+                    <img class="col-lg bomb4" style="padding:0;" src="../EscapeRoom/test/img/bomb4.png" alt="">
                 </div>
             </div>
             <div class="row justify-content-center" style="padding-top:75px;">
@@ -373,15 +471,15 @@
             <div style="margin-top:75px; position:relative">
                 <div class="container-fluid" style=" text-align: center;">
                     <div class="row">
-                        <img src="img/fire-back.png" alt="" width="100%">
-                        <img style="z-index:99; position: absolute; top:0;" src="img/fire-front.png" alt=""
+                        <img src="../EscapeRoom/test/img/fire-back.png" alt="" width="100%">
+                        <img style="z-index:99; position: absolute; top:0;" src="../EscapeRoom/test/img/fire-front.png" alt=""
                             width="100%">
                     </div>
                 </div>
                 <div class="container"
                     style=" text-align: center; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%)">
                     <div class="row justify-content-center">
-                        <img class="col-lg-10" style="z-index:9;" src="img/firefighters.png" alt="">
+                        <img class="col-lg-10" style="z-index:9;" src="../EscapeRoom/test/img/firefighters.png" alt="">
                     </div>
                 </div>
             </div>
@@ -390,7 +488,7 @@
 
         <section class="container" style="padding:200px 0;">
             <div class="row" style="flex-direction: column; align-items:center;">
-                <img src="img/key.png" alt="">
+                <img src="../EscapeRoom/test/img/key.png" alt="">
                 <p style="color: #E55A5A;font-size: 24px; font-weight:bold; line-height:48px;">特別提醒</p>
                 <p style="color: white; font-size: 16px; line-height: 36px;">眼明手快、動作穩定、頭腦清楚才有成功機會，</p>
                 <p style="color: white; font-size: 16px; line-height: 36px;">沒有準備好之前請勿輕易嘗試！</p>
@@ -399,30 +497,40 @@
     </main>
 
     <section>
-        <div class="game-rules d-flex align-items-center">
-            <div class="container d-flex justify-content-around">
-                <div class="col-lg-3">
-                    <div style=" text-align: center;">
-                        <img src="img/white-man.png" alt="">
-                        <div style="color: #E55A5A; font-size: 24px; font-weight:bold; margin-bottom: 20px;">挑戰人數</div>
-                        <p style="color: white;font-size: 16px;">4~8人</p>
+        <div class="game-rules d-flex justify-content-center align-items-center">
+            <div class="container">
+                <div class="row d-flex justify-content-around" style="margin-bottom:75px;">
+                    <div class="col-lg-4">
+                        <div style=" text-align: center;">
+                            <img src="../EscapeRoom/test/img/white-man.png" alt="">
+                            <div style="color: #E55A5A; font-size: 24px; font-weight:bold; margin-bottom: 20px;">挑戰人數
+                            </div>
+                            <p style="color: white;font-size: 16px;">4~8人</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div style=" text-align: center;">
+                            <img src="../EscapeRoom/test/img/clock.png" alt="">
+                            <div style="color: #E55A5A;font-size: 24px; font-weight:bold; margin-bottom: 20px;">挑戰時間
+                            </div>
+                            <p style="color: white;font-size: 16px;">60分鐘</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div style="text-align: center;">
+                            <img src="../EscapeRoom/test/img/key.png" alt="">
+                            <div style="color: #E55A5A;font-size: 24px; font-weight:bold; line-height:48px;">場次時間</div>
+                            <p style="color: white;font-size: 16px; line-height: 36px;">11:00 / 12:20 / 13:50 / 15:20 /
+                            </p>
+                            <p style="color: white;font-size: 16px; line-height: 36px;">16:50 / 18:10 / 19:30</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div style=" text-align: center;">
-                        <img src="img/clock.png" alt="">
-                        <div style="color: #E55A5A;font-size: 24px; font-weight:bold; margin-bottom: 20px;">挑戰時間</div>
-                        <p style="color: white;font-size: 16px;">60分鐘</p>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div style=" text-align: center;">
-                        <img src="img/key.png" alt="">
-                        <div style="color: #E55A5A;font-size: 24px; font-weight:bold; line-height:48px;">場次時間</div>
-                        <p style="color: white;font-size: 16px; line-height: 36px;">11:00 / 12:20 / 13:50 / 15:20 /</p>
-                        <p style="color: white;font-size: 16px; line-height: 36px;">16:50 / 18:10 / 19:30</p>
-                    </div>
-                </div>
+                <a href="/EscapeRoom/ES-theme-doctor.html">
+                    <div
+                        style="width:200px; height:60px; color:white; border:1px solid white; font-size: 24px; text-align:center; font-weight:bold; padding:10px 0; margin:auto">
+                        NEXT</div>
+                </a>
             </div>
         </div>
     </section>
@@ -432,20 +540,20 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 d-flex align-items-center justify-content-center">
-                        <img src="img/logo-white.png" alt="">
+                        <img src="../EscapeRoom/test/img/logo-white.png" alt="">
                         <p style="font-size: 24px; margin:0 16px;">許多門</p>
                         <div class="d-flex" style="flex-direction: column;font-size: 6px;">
                             <p style="letter-spacing:1.2px;">ESCAPE</p>
                             <p>STUDIOS</p>
                         </div>
                     </div>
-                    <div class="col-lg-7">
-                        <p style="font-size: 16px; line-height:36px;">台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面）</p>
-                        <p style="font-size: 16px;">TEL 04-23020080 / 0971283166</p>
+                    <div class="col-lg-7 col-9 d-flex align-items-center justify-content-center"
+                        style="font-size: 16px;">
+                        <p style="line-height:36px;">台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面）</p>
+                        <p>TEL 04-23020080 / 0971283166</p>
                     </div>
-                    <div class="col-lg-1">
-                        <a href="https://www.facebook.com/TCDOORSSS"><img src="img/fb_b.png" alt=""></a>
-                    </div>
+                    <a class="col-lg-1 col-3 d-flex align-items-center justify-content-center"
+                        href="https://www.facebook.com/TCDOORSSS"><img src="img/fb_b.png" alt=""></a>
                 </div>
             </div>
         </div>
@@ -454,8 +562,31 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
     <script>
+
+        var stop1
+        var bomb_start = false
+        $(function () {
+            $(window).on("scroll", function () {
+                var windowScrollTop = $(window).scrollTop()
+                var windowHeight = $(window).height()
+                var bombtrigger = $(".bomb").offset().top
+                if (bombtrigger - windowHeight / 2 < windowScrollTop && !bomb_start) {
+                    bomb_start = true
+                    if ($(window).width() >= 576) {
+                        alert("拆彈囉！！！")
+                    }
+                    showtime()
+                    stop1 = setInterval(countdown, 1000)
+                }
+            })
+        })
+
         var bombgame = document.querySelector(".bombgame")
         var time = document.querySelector(".time")
         var u_line = document.querySelectorAll(".u-line")
@@ -486,8 +617,6 @@
             }
         }
 
-        showtime()
-
         function countdown() {
             timer--
             var miunte = (timer - (timer % 60)) / 60
@@ -510,8 +639,6 @@
                 explosion()
             }
         }
-
-        var stop1 = setInterval(countdown, 1000)
 
         for (let i = 0; i < u_line.length; i++) {
             u_line[i].onclick = function () {
