--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -183,11 +183,11 @@
 
         .u-line {
             position: relative;
-            cursor: url(img/bomb-game-11.png), auto;
+            cursor: url(../EscapeRoom/test/imgimg/bomb-game-11.png), auto;
         }
 
         .u-line:active {
-            cursor: url(img/bomb-game-12.png), auto;
+            cursor: url(../EscapeRoom/test/imgimg/bomb-game-12.png), auto;
         }
 
         .c-line {
@@ -204,12 +204,12 @@
             position: absolute;
             right: 0;
             top: 0;
-            cursor: url(img/bomb-game-11.png), auto;
+            cursor: url(../EscapeRoom/test/imgimg/bomb-game-11.png), auto;
             display: none;
         }
 
         .linemask:active {
-            cursor: url(img/bomb-game-12.png), auto;
+            cursor: url(../EscapeRoom/test/imgimg/bomb-game-12.png), auto;
         }
 
         .linemask.active {
@@ -553,7 +553,7 @@
                         <p>TEL 04-23020080 / 0971283166</p>
                     </div>
                     <a class="col-lg-1 col-3 d-flex align-items-center justify-content-center"
-                        href="https://www.facebook.com/TCDOORSSS"><img src="img/fb_b.png" alt=""></a>
+                        href="https://www.facebook.com/TCDOORSSS"><img src="../EscapeRoom/test/imgimg/fb_b.png" alt=""></a>
                 </div>
             </div>
         </div>
