--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -260,6 +260,7 @@
         @media(max-width:576px) {
             .pc {
                 display: none;
+                height: 100%;
             }
 
             .phone {
@@ -403,7 +404,7 @@
 
 <body>
     <!-- 電腦 -->
-    <div class="pc">
+    <div style="height: 100%;" class="pc">
         <nav id="navbar" class="nav d-flex justify-content-between" style="position: fixed; top:0; left:0; z-index:9">
             <div class="navLogo col-lg-4 d-flex align-items-center justify-content-center">
                 <img width="45px" height="45px" src="/img/logo-white.png" alt="">
