--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>ES-theme-doctor</title>
     <style>
         /* 電腦 */
         .nav {
