--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -160,6 +160,7 @@
         body {
             padding: 0;
             margin: 0;
+            overflow-x: hidden;
             background: #0C0F21;
         }
 
