--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -276,7 +276,7 @@
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
-                overflow: hidden;
+                /* overflow: hidden; */
                 padding: 280px 0 0 60px;
             }
 
