--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -49,6 +49,7 @@
             left: 0;
             width: 25%;
             height: 50%;
+            z-index: -1;
         }
 
         .slide-2 {
@@ -58,6 +59,7 @@
             width: 25%;
             height: 50%;
             transform: translate(0, 100%);
+            z-index: -1;
         }
 
         .slide-3 {
@@ -67,6 +69,7 @@
             width: 25%;
             height: 50%;
             transform: translate(100%, 100%);
+            z-index: -1;
         }
 
         .slide-4 {
@@ -76,6 +79,7 @@
             width: 25%;
             height: 50%;
             transform: translate(100%, 0);
+            z-index: -1;
         }
 
         .slide-5 {
@@ -85,6 +89,7 @@
             width: 25%;
             height: 50%;
             transform: translate(200%, 0);
+            z-index: -1;
         }
 
         .slide-6 {
@@ -94,6 +99,7 @@
             width: 25%;
             height: 50%;
             transform: translate(200%, 100%);
+            z-index: -1;
         }
 
         .slide-7 {
@@ -103,6 +109,7 @@
             width: 25%;
             height: 50%;
             transform: translate(300%, 100%);
+            z-index: -1;
         }
 
         .slide-8 {
@@ -112,6 +119,7 @@
             width: 25%;
             height: 50%;
             transform: translate(300%, 0);
+            z-index: -1;
         }
 
         .Banner {
@@ -158,9 +166,6 @@
 
 
         body {
-            padding: 0;
-            margin: 0;
-            /* overflow-x: hidden; */
             background: #0C0F21;
             height: 100%;
         }
@@ -276,7 +281,7 @@
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
-                /* overflow: hidden; */
+                overflow: hidden;
                 padding: 280px 0 0 60px;
             }
 
@@ -378,7 +383,7 @@
             }
 
             .ham:hover ul {
-                left: 60px;
+                left: 70px;
                 top: 44px;
                 transform: translateX(-100%);
             }
